--- a/Website/index.html
+++ b/Website/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta charset="utf-8">
+	<meta name="description" content="Website voor project embedded-ICT op Thomas More campus de Nayer">
+    <meta name="keywords" content="project,digi-sketch,etch a sketch, sketch, etch, xc888">
+    <meta name="author" content="John Doe">
 	<title>Digi-sketch</title>
 </head>
 <body>
