--- a/Website/index.html
+++ b/Website/index.html
@@ -5,9 +5,42 @@
 	<meta name="description" content="Website voor project embedded-ICT op Thomas More campus de Nayer">
     <meta name="keywords" content="project,digi-sketch,etch a sketch, sketch, etch, xc888">
     <meta name="author" content="John Doe">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Digi-sketch</title>
+	<link rel="stylesheet" type="text/css" href="CSS/main.css">
+	<script src="Scripts/index.js"></script>
 </head>
 <body>
+	<div class="slideshow-container">
 
+	<div class="mySlides fade">
+		<div class="numbertext">1 / 3</div>
+		<img src="IMG/test1.jpg" style="width:100%">
+		<div class="text">Caption Text</div>
+	</div>
+
+	<div class="mySlides fade">
+		<div class="numbertext">2 / 3</div>
+		<img src="IMG/test2.png" style="width:100%">
+		<div class="text">Caption Two</div>
+	</div>
+
+	<div class="mySlides fade">
+		<div class="numbertext">3 / 3</div>
+		<img src="IMG/test3.jpg" style="width:100%">
+		<div class="text">Caption Three</div>
+	</div>
+
+	<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+	<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+	</div>
+	<br>
+
+	<div style="text-align:center">
+		<span class="dot" onclick="currentSlide(1)"></span> 
+		<span class="dot" onclick="currentSlide(2)"></span> 
+		<span class="dot" onclick="currentSlide(3)"></span> 
+	</div>
 </body>
 </html>
