--- a/Website/index.html
+++ b/Website/index.html
@@ -7,40 +7,50 @@
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Digi-sketch</title>
+	<link rel="stylesheet" type="text/css" href="CSS/slideshow.css">
 	<link rel="stylesheet" type="text/css" href="CSS/main.css">
-	<script src="Scripts/index.js"></script>
+	<script src="Scripts/slideshow.js"></script>
 </head>
-<body>
-	<div class="slideshow-container">
-
-	<div class="mySlides fade">
-		<div class="numbertext">1 / 3</div>
-		<img src="IMG/test1.jpg" style="width:100%">
-		<div class="text">Caption Text</div>
+<body onload="currentSlide(1)">
+<!--navigatie veld-->
+	<div id="navigation">
+		halo
 	</div>
+<!--einde navigatie-->
+<!--slideshow-->
+	<div class="slideshow">
 
-	<div class="mySlides fade">
-		<div class="numbertext">2 / 3</div>
-		<img src="IMG/test2.png" style="width:100%">
-		<div class="text">Caption Two</div>
-	</div>
+		<div class="mySlides fade">
+			<div class="numbertext">1 / 3</div>
+			<img src="IMG/test1.jpg" style="width:100%" alt="foto digi-sketch">
+			<div class="text">Caption Text</div>
+		</div>
 
-	<div class="mySlides fade">
-		<div class="numbertext">3 / 3</div>
-		<img src="IMG/test3.jpg" style="width:100%">
-		<div class="text">Caption Three</div>
-	</div>
+		<div class="mySlides fade">
+			<div class="numbertext">2 / 3</div>
+			<img src="IMG/test2.png" style="width:100%" alt="foto digi-sketch">
+			<div class="text">Caption Two</div>
+		</div>
 
-	<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-	<a class="next" onclick="plusSlides(1)">&#10095;</a>
+		<div class="mySlides fade">
+			<div class="numbertext">3 / 3</div>
+			<img src="IMG/test3.jpg" style="width:100%" alt="foto digi-sketch">
+			<div class="text">Caption Three</div>
+		</div>
 
+		<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+		<a class="next" onclick="plusSlides(1)">&#10095;</a>
 	</div>
 	<br>
-
 	<div style="text-align:center">
 		<span class="dot" onclick="currentSlide(1)"></span> 
 		<span class="dot" onclick="currentSlide(2)"></span> 
 		<span class="dot" onclick="currentSlide(3)"></span> 
 	</div>
+<!--einde slideshow-->
+	
+	<footer>
+		
+	</footer>
 </body>
 </html>
