--- a/Website/index.html
+++ b/Website/index.html
@@ -13,8 +13,13 @@
 </head>
 <body onload="currentSlide(1)">
 <!--navigatie veld-->
-	<div id="navigation">
-		halo
+	<div class="navigation">
+		<ul>
+			<li>
+				<a href="#top">main</a>
+				<a href="contact.html">Contact</a>
+			</li>
+		</ul>
 	</div>
 <!--einde navigatie-->
 <!--slideshow-->
