--- a/Website/contact.html
+++ b/Website/contact.html
@@ -15,7 +15,7 @@
 		<ul>
 			<li>
 				<a href="index.html">main</a>
-				<a href="#top"></a>
+				<a href="#top">Contact</a>
 			</li>
 		</ul>
 	</div>
