--- a/Website/TryOut.html
+++ b/Website/TryOut.html
@@ -6,21 +6,27 @@
     <meta name="keywords" content="project,digi-sketch,etch a sketch, sketch, etch, xc888">
     <meta name="author" content="Rotthier Nico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Contact</title>
+	<title>Digi-sketch</title>
 	<link type="icon/image" rel="icon" href="IMG/icon.png">
 	<link rel="stylesheet" type="text/css" href="CSS/main.css">
+	<link rel="stylesheet" type="text/css" href="CSS/TryOut.css">
 </head>
 <body>
-	<!--navigatie veld-->
+<!--navigatie veld-->
 	<div class="navigation">
 		<ul>
 			<li>
 				<a href="index.html">main</a>
-				<a href="#top">Contact</a>
-				<a href="TryOut.html">Try it!</a>
+				<a href="contact.html">Contact</a>
+				<a href="#top">Try it!</a>
 			</li>
 		</ul>
 	</div>
 <!--einde navigatie-->
+<!--Canvas-->
+	<div id="canvasdiv">
+		<canvas id="tyOutCanvas" width="800" height="700" ></canvas>
+	</div>
+<!--Einde Canvas-->
 </body>
 </html>
