--- a/Website/TryOut.html
+++ b/Website/TryOut.html
@@ -10,6 +10,7 @@
 	<link type="icon/image" rel="icon" href="IMG/icon.png">
 	<link rel="stylesheet" type="text/css" href="CSS/main.css">
 	<link rel="stylesheet" type="text/css" href="CSS/TryOut.css">
+	<script src="Scripts/tryOut.js"></script>
 </head>
 <body>
 <!--navigatie veld-->
@@ -25,6 +26,7 @@
 <!--einde navigatie-->
 <!--Canvas-->
 	<div id="canvasdiv">
+		<img id="tryOutImg" src="IMG/tryOutBackground.png">
 		<canvas id="tyOutCanvas" width="800" height="700" ></canvas>
 	</div>
 <!--Einde Canvas-->
