--- a/Website/contact.html
+++ b/Website/contact.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="project,digi-sketch,etch a sketch, sketch, etch, xc888">
     <meta name="author" content="Rotthier Nico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Contact</title>
+	<title>Digi-sketch</title>
 	<link type="icon/image" rel="icon" href="IMG/icon.png">
 	<link rel="stylesheet" type="text/css" href="CSS/main.css">
 </head>
