--- a/Website/index.html
+++ b/Website/index.html
@@ -30,19 +30,19 @@
 		<div class="mySlides fade">
 			<div class="numbertext">1 / 3</div>
 			<img src="IMG/bat.jpg" style="width:100%" alt="foto digi-sketch">
-			<div class="text">Caption Text</div>
+			<div class="text">6200mAh baterij</div>
 		</div>
 
 		<div class="mySlides fade">
 			<div class="numbertext">2 / 3</div>
 			<img src="IMG/scherm.jpg" style="width:100%" alt="foto digi-sketch">
-			<div class="text">Caption Two</div>
+			<div class="text">Grafisch LCD</div>
 		</div>
 
 		<div class="mySlides fade">
 			<div class="numbertext">3 / 3</div>
 			<img src="IMG/controller.jpg" style="width:100%" alt="foto digi-sketch">
-			<div class="text">Caption Three</div>
+			<div class="text">XC888 controller</div>
 		</div>
 
 		<a class="prev" onclick="plusSlides(-1)"><img class="slideshownav" src="IMG/previous.png" alt="previous"></a>
