--- a/Website/TryOut.html
+++ b/Website/TryOut.html
@@ -27,7 +27,7 @@
 <!--Canvas-->
 	<div id="canvasdiv">
 		<img id="tryOutImg" src="IMG/tryOutBackground.png">
-		<canvas id="tyOutCanvas" width="800" height="700" ></canvas>
+		<canvas id="tryOutCanvas" width="800" height="700" ></canvas>
 	</div>
 <!--Einde Canvas-->
 </body>
