--- a/Website/TryOut.html
+++ b/Website/TryOut.html
@@ -15,11 +15,11 @@
 <body>
 <!--navigatie veld-->
 	<div class="navigation">
-		<ul>
-			<li>
-				<a href="index.html">main</a>
-				<a href="contact.html">Contact</a>
-				<a href="#top">Try it!</a>
+		<ul class="ulnav">
+			<li class="linav">
+				<a class="linknav" href="index.html"><img class="home" src="IMG/home.png" alt="home button"></a>
+				<a class="linknav" href="contact.html">Contact</a>
+				<a class="linknav" href="#top">Try it!</a>
 			</li>
 		</ul>
 	</div>
