--- a/Website/contact.html
+++ b/Website/contact.html
@@ -13,14 +13,21 @@
 <body>
 	<!--navigatie veld-->
 	<div class="navigation">
-		<ul>
-			<li>
-				<a href="index.html">main</a>
-				<a href="#top">Contact</a>
-				<a href="TryOut.html">Try it!</a>
+		<ul class="ulnav">
+			<li class="linav">
+				<a class="linknav" href="index.html"><img class="home" src="IMG/home.png" alt="home button"></a>
+				<a class="linknav" href="#top">Contact</a>
+				<a class="linknav" href="TryOut.html">Try it!</a>
 			</li>
 		</ul>
 	</div>
 <!--einde navigatie-->
+<!--einde navigatie-->
+<!--begin formulier-->
+
+<form>
+	
+</form>
+<!--einde formulier-->
 </body>
 </html>
