--- a/Website/index.html
+++ b/Website/index.html
@@ -15,11 +15,11 @@
 <body onload="currentSlide(1)">
 <!--navigatie veld-->
 	<div class="navigation">
-		<ul>
-			<li>
-				<a href="#top">main</a>
-				<a href="contact.html">Contact</a>
-				<a href="TryOut.html">Try it!</a>
+		<ul class="ulnav">
+			<li class="linav">
+				<a class="linknav" href="#top"><img class="home" src="IMG/home.png" alt="home button"></a>
+				<a class="linknav" href="contact.html">Contact</a>
+				<a class="linknav" href="TryOut.html">Try it!</a>
 			</li>
 		</ul>
 	</div>
