--- a/Website/TryOut.html
+++ b/Website/TryOut.html
@@ -30,5 +30,11 @@
 		<canvas id="tryOutCanvas" width="800" height="700" ></canvas>
 	</div>
 <!--Einde Canvas-->
+<!--begin footer-->	
+	<footer>
+		<p id="copyright">&copy;Thomas More Mechelen-Antwerpen vzw - Campus De Nayer - Professionele bachelor elektronica-ict – 2018</p>
+		<a href="https://github.com/TNTdesigner/Digi-sketch"><img id="githubpage" src="IMG/github.png" alt="link to github page"></a>
+	</footer>
+<!--einde footer-->
 </body>
 </html>
