--- a/Website/index.html
+++ b/Website/index.html
@@ -55,9 +55,11 @@
 		<span class="dot" onclick="currentSlide(3)"></span> 
 	</div>
 <!--einde slideshow-->
-	
+<!--begin footer-->	
 	<footer>
-		
+		<p id="copyright">&copy;Thomas More Mechelen-Antwerpen vzw - Campus De Nayer - Professionele bachelor elektronica-ict – 2018</p>
+		<a href="https://github.com/TNTdesigner/Digi-sketch"><img id="githubpage" src="IMG/github.png" alt="link to github page"></a>
 	</footer>
+<!--einde footer-->
 </body>
 </html>
