--- a/Website/TryOut.html
+++ b/Website/TryOut.html
@@ -17,7 +17,7 @@
 	<div class="navigation">
 		<ul class="ulnav">
 			<li class="linav">
-				<a class="linknav" href="index.html"><img class="home" src="IMG/home.png" alt="home button"></a>
+				<a class="linknav" href="main.html"><img class="home" src="IMG/home.png" alt="home button"></a>
 				<a class="linknav" href="contact.html">Contact</a>
 				<a class="linknav" href="#top">Try it!</a>
 			</li>
@@ -28,6 +28,10 @@
 	<div id="canvasdiv">
 		<img id="tryOutImg" src="IMG/tryOutBackground.png">
 		<canvas id="tryOutCanvas" width="800" height="700" ></canvas>
+	</div>
+	<div>
+		<h2>Hoe tekenen?</h2>
+		<p></p>
 	</div>
 <!--Einde Canvas-->
 <!--begin footer-->	
