--- a/Website/contact.html
+++ b/Website/contact.html
@@ -16,7 +16,7 @@
 	<div class="navigation">
 		<ul class="ulnav">
 			<li class="linav">
-				<a class="linknav" href="index.html"><img class="home" src="IMG/home.png" alt="home button"></a>
+				<a class="linknav" href="main.html"><img class="home" src="IMG/home.png" alt="home button"></a>
 				<a class="linknav" href="#top">Contact</a>
 				<a class="linknav" href="TryOut.html">Try it!</a>
 			</li>
